# napalm-unifi

./: entry_points.txt  pyproject.toml
napalm_unifi/: uap.py  udm.py  unifi.py
napalm_unifi/utils/textfsm_templates/: ubiquiti_unifi_ip_address_show.textfsm  ubiquiti_unifi_ip_link_show.textfsm
