[tool.poetry]
name = "napalm-unifi"
version = "0.4.0"
description = ""
authors = ["Andrew Bates <andrew.bates@networktocode.com>"]
license = "Apache 2.0"
readme = "README.md"
packages = [{include = "napalm_unifi"}]

[tool.poetry.dependencies]
python = "^3.9"
napalm = "^5.0"


[tool.poetry.group.dev.dependencies]
python-dotenv = "^1.0.0"
pytest = "^7.4.3"
ruff = "^0.2.2"

[tool.poetry.plugins."napalm.drivers"]
"unifi.uap" = "napalm_unifi.uap:UnifiAccessPointDriver"
"unifi.udm" = "napalm_unifi.udm:UnifiDreamMachineDriver"
"unifi.usg" = "napalm_unifi.usg:UnifiSecurityGatewayDriver"
"unifi.usw" = "napalm_unifi.usw:UnifiSwitchDriver"
"unifi.usw_flex" = "napalm_unifi.usw_flex:UnifiSwitchFlexDriver"
"unifi.usw_lite" = "napalm_unifi.usw_lite:UnifiSwitchLiteDriver"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
